fixing issue #6 Arrow bearing is distorted on long distances
changing out .bearing to .angle( this._map

--- a/example/index.css
+++ b/example/index.css
@@ -6,3 +6,13 @@ body,
    margin: 0;
    padding: 0;
 }
+
+
+.norwayLink{
+   color: #0078A8;
+}
+
+.norwayLink:hover{
+   text-decoration: underline;
+   cursor: pointer;
+}
